# 2. make sure that lines break at 80 chars for constricted display situations
#<-------------------------------- 80 chars ---------------------------------->#

2016-10-15 mmichaud <m.michael.michaud@orange.fr>
  * FR #237 : add an option in ViewOptionsPlugIn to synchronize/desynchronize
    selection in LayerView AttributePanel (synchronized by default)

2016-10-13 mmichaud <m.michael.michaud@orange.fr>
  * EditOptions are now persistent except rolling back invalid edits which is
    activated by default (in OpenJumpConfiguration)

2016-10-09 mmichaud <m.michael.michaud@orange.fr>
  * Refactoring of EditOptionsPanel + add single editable layer option

2016-10-08
  * Fix bug #433 throwing exception when applying scale limits in bad order
  * Optimization : changeStyle was applying the new style two times
  * Fix #432 Non-writable datasource (zipped, datastore...) :
    add prompt to detach the source in EditablePlugIn
  * Improve MoveSelectedLayerable to another category

2016-10-08 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Upgraded Sextante (Correct bug #410. Added Sextante Data Explorer)

2016-10-07 mmichaud <m.michael.michaud@orange.fr>
  * Fix SaveLayersWithoutDataSourcePlugIn by using JFileChooser instead of
    JFCWithEnterAction

2016-10-06 ede
  * PLUS: update ImageIO-Ext to 1.1.15, GDAL binding to 2.1.0 

2016-10-06 mmichaud <m.michael.michaud@orange.fr>
  * Use URI_KEY and FILE_KEY properties for file based datasources
    in order to keep compatibility with legacy plugins
  * fix #428 (introduced during ProjUtil refactoring)

2016-10-05 mmichaud <m.michael.michaud@orange.fr>
  * Fix #431 : Save project with unsaved layers

2016-10-04 Giuseppe Aruta  <giuseppe_aruta@yahoo.it>
  * Added checkbox to EditOptionPanel that select the geometry after 
    it has been drawn

2016-10-03 mmichaud <m.michael.michaud@orange.fr>
  * Make RemoveSpikePlugIn more robust

2016-10-01 mmichaud <m.michael.michaud@orange.fr>